make minor changes to HTML and modify the styling of the project section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section id="projects">
         <div class="container">
         <h2>Projects</h2>
-        <p>While you're here, Have a look at some of my featured work.</p>
+        <p class="feature">While you're here, Have a look at some of my featured work.</p>
         <ul class="project-list">
           <li class="project-tile">
             <div class="img-container">
@@ -88,7 +88,7 @@
                   </div>
                   <div class="project-caption">
                     <h3>Photo Gallery</h3>
-                    <p class="project-description"> The project is an image gallery using CSS grid and, implement a search feature using vanilla JavaScript. Using the Baquette Box plugin, when a thumbnail is clicked; a lightbox is opened and the user views a larger version of the thumbnail. The user can also cycle through all images in the gallery in the lightbox mode.</p>
+                    <p class="project-description"> The project is an image gallery using CSS grid with a search feature implemented using vanilla JavaScript. Using the Baquette Box plugin, when a thumbnail is clicked; a lightbox is opened and the user views a larger version of the thumbnail. The user can also cycle through all images in the gallery in the lightbox mode.</p>
                   </div>
                   <div class="btn-container">
                     <a href="https://github.com/jahson8/fewd-project5-photo-gallery" class="btn project-btn repo" target="_blank">Repo</a><a href="https://jahson8.github.io/fewd-project5-photo-gallery" class="btn project-btn demo" target="_blank">Demo</a>
