--- a/index.html
+++ b/index.html
@@ -235,5 +235,6 @@
       </footer>
     </main>
     <script src="js/script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
