update project link Phrase Hunter

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 />
               </div>
               <div class="project-caption">
-                <h3>Wheel of Success</h3>
+                <h3>Phrase Hunter</h3>
                 <p class="project-description">
                   The project consists of using HTML, CSS and JavaScript to
                   create a game similar to hangman. The player guesses the
@@ -130,12 +130,12 @@
               </div>
               <div class="btn-container">
                 <a
-                  href="https://github.com/jahson8/fewd-project6"
+                  href="https://github.com/jahson8/fsjs-proj-4-Game-App"
                   class="btn project-btn repo"
                   target="_blank"
                   >Repo</a
                 ><a
-                  href="https://jahson8.github.io/fewd-project6/"
+                  href="https://jahson8.github.io/fsjs-proj-4-Game-App/"
                   class="btn project-btn demo"
                   target="_blank"
                   >Demo</a
